--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="location_txt">Alcatraz Island, CA</string>
     <string name="double_dash">--</string>
     <string name="summary_init_txt">Getting current weather...</string>
+    <string name="summary_network_error_txt">Network is unavailable. Please make sure you are connected to internet.</string>
+    <string name="summary_service_error_txt">Service is unavailable. Please try again later.</string>
     <string name="humidity_label">HUMIDITY</string>
     <string name="rain_label">RAIN?</string>
     <string name="weather_icon_descr">Weather type icon image</string>
