--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,17 @@
 <resources>
     <string name="app_name">Stormy</string>
 
-    <!--MainActivity-->
-    <string name="location_txt">Alcatraz Island, CA</string>
-    <string name="double_dash">--</string>
+    <!--CurrentWeatherActivity-->
     <string name="summary_init_txt">Getting current weather...</string>
     <string name="network_error_txt">Network is unavailable. Please make sure you are connected to internet.</string>
     <string name="service_error_txt">Service is unavailable. Please try again later.</string>
     <string name="humidity_label">HUMIDITY</string>
     <string name="rain_label">RAIN?</string>
+    <string name="hourly_btn_txt">HOURLY</string>
+    <string name="weekly_btn_text">7 DAYS</string>
+    <string name="double_dash">--</string>
     <string name="weather_icon_descr">Weather type icon image</string>
     <string name="degree_image_descr">Degree image</string>
-
-    <!--AlertDialogFragment-->
-    <string name="alert_dialog_title">Ooopss! Sorry.</string>
-    <string name="alert_dialog_msg">There was an error. Please try again later.</string>
-    <string name="alert_dialog_btn_txt">OK</string>
     <string name="refresh_image_descr">Refresh image</string>
+
 </resources>
