--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Stormy</string>
 
     <!--CurrentWeatherActivity-->
-    <string name="summary_init_txt">Getting current weather...</string>
+    <string name="summary_init_txt">Getting current weather…</string>
     <string name="network_error_txt">Network is unavailable. Please make sure you are connected to internet.</string>
     <string name="service_error_txt">Service is unavailable. Please try again later.</string>
     <string name="humidity_label">HUMIDITY</string>
